2009-12-29
----------------------
* Tweaked a bit of the Documentation for typos and to reflect support for Procs
* Started ChangeLog