@@ -5,13 +5,9 @@ require 'acts_as_csv_importable'
 ActsAsCSVable.allow_dynamic_import_template_generation = false
 
 begin
-  require 'fastercsv'
-rescue Exception
-  begin
-    require 'csv'
+  require 'csv'
   rescue Exception
-    raise ActsAsCSVable::MissingGemException.new("ActsAsCSVable requires either the FasterCSV or CSV gem")
-  end
+    raise ActsAsCSVable::MissingGemException.new("ActsAsCSVable requires the Ruby 1.9 CSV gem")
 end
   
 require 'array'
@@ -20,9 +16,3 @@ ActiveRecord::Base.class_eval do
   include ActsAsCSVExportable::ActiveRecord::Exporting
   include ActsAsCSVImportable::ActiveRecord::Importing
 end
-
-
-require 'action_controller' #to load Mime module
-# add the csv MimeType
-Mime::Type.register 'text/csv', :csv, %w(text/comma-separated-values)
-
