@@ -1,8 +1,8 @@
 module ActsAsCSVable
   module Version
-    MAJOR = 1
-    MINOR = 1
-    TINY  = 2
+    MAJOR = 2
+    MINOR = 0
+    TINY  = 0
     
     STRING = [MAJOR, MINOR, TINY].join('.')
   end
